layout issues 5

--- a/client/src/Escape/Play.css
+++ b/client/src/Escape/Play.css
@@ -570,6 +570,7 @@ p{
     .roomtable {
         overflow-x: auto;
         margin-right: 0;
+        margin-bottom: 15%;
     };
     .room {overflow-x: auto};
     #body {margin-right: 0px;}
